--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="starting-wrapper">
         <div class="results-wrapper">
             <div class="results-title">Results</div>
+            <div class="results-download">Download Results Image</div>
             <div class="results-content"></div>
         </div>
 
